--- a/views/author.ejs
+++ b/views/author.ejs
@@ -19,10 +19,11 @@
 
   <!-- Box 1: Image + Name -->
 <div class="left_1">
-  <!-- Photo -->
   <div class="left_1-1">
-    <img src="/author/images/person.png" width="156" height="142" alt="Person">
+    <img src="/profilllimage.png" width="156" height="142" alt="Person">
   </div>
+</div>
+
 
   <!-- Name -->
   <div class="left_1-2">
