--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -24,12 +24,14 @@
                     style="flex: 1"
                   />
                   <button class="btn btn-primary" style="border-radius: 20px;">
-                    Yangi Harid Qilish
+                  Yangi Reja qo'shish
                   </button>
                 </div>
             </form>
         </div>
-
+        <button id="clean-all"class="btn btn-danger" style="border-radius: 20px;">
+         Hamma Rejalarni Ochirish
+        </button>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
