mongo connection try

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -67,7 +67,7 @@
               <p><%=user.adress%></p>
             </div>
           </div>
-          <div class="marginer"></div>
+<div class="marginer"></div>
           <div class="left_3">
             <strong>Languages</strong>
             <div class="left_3_info">
@@ -92,7 +92,7 @@
               <div class="margin_line_3"></div>
             </div>
           </div>
-          <div class="marginer"></div>
+ <div class="marginer"></div>
           <div class="left_4">
             <strong>Skills</strong>
             <div class="left_4_info">
@@ -127,14 +127,35 @@
               <span>WordPress</span>
               <p>85%</p>
             </div>
+            <div class="left_info_margin">
+              <div class="margin_line_4_5"></div>
+            </div>
+          </div>
         <div class="marginer"></div>
         <div class="left_5"></div>
         <div class="marginer"></div>
 
       </div> <!-- end left_frame -->
 
-      <div class="midd_frame"></div>
-      <div class="right_frame"></div>
+     <div class="middle_frame">
+          <div class="middle_top">
+            <div class="middle_top_info">
+              <span>Doctor neurologists in OHSU Hospital</span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et,
+                volutpat feugiat placerat lobortis. Natoque rutrum semper sed
+                suspendisse nunc lectus.
+              </p>
+              <button>
+                <a>HIRE ME</a>
+              </button>
+           <div class="middle_top_img">
+            <img src="/profile.png" alt="Profile Photo">
+           </div>
+
+
+
+
 
     </div> <!-- end main_frame -->
   </div> <!-- end frame -->
