--- a/public/main.css
+++ b/public/main.css
@@ -100,12 +100,24 @@
 }
 
 /* left_2 box */
-.main_frame .left_2 {
+/* .main_frame .left_2 {
     position: relative;
     width: 221px;
     height: 126px;
     margin-left: 44px;
+    background-color: aqua;
+} */
+
+.main_frame .left_frame .marginer {
+  position: relative;
+  width: 220px;
+  height: 0;
+  margin-left: 40px;
+  margin-bottom: 25px;
+  margin-top: 39px;
+  border: 1px solid #f0f0f6;
 }
+
 .main_frame .left_frame .left_2 {
   position: relative;
   width: 221px;
@@ -125,45 +137,6 @@
   flex-direction: row;
   justify-content: space-between;
 }
-
-.main_frame .left_frame .left_2 .left_2_info span {
-  position: relative;
-  width: 75px;
-  height: 25px;
-  background-color: #ffb400;
-  border-radius: 5px;
-  font-family: sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: center;
-  color: #767676;
-}
-
-.main_frame .left_frame .left_2 .left_2_info p {
-  font-family: sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 22px;
-  color: #2b2b2b;
-  font-size: 16px;
-  font-family: sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: center;
-  color: #767676;
-}
-
-.main_frame .left_frame .left_2 .left_2_info .freelance {
-  font-family: sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 22px;
-  color: #28a745;
-  font-size: 16px;
-}
-
 
 /* left_3 box */
 .main_frame .left_frame .left_3 {
@@ -214,38 +187,77 @@
   line-height: 24px;
   color: #767676;
 }
-
-.left_info_margin {
-  width: 100%;
-  border: 2px solid #ffb400;
-  border-radius: 20px;
-  padding: 2px;
+/* left_4 box */
+.main_frame .left_frame .left_4 {
+  position: relative;
+  width: 220px;
+  height: 252px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 45px;
+  margin-top: 5px;
 }
 
-.left_info_margin .margin_line_1 {
+.main_frame .left_frame .left_4 strong {
+  width: 200px;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.main_frame .left_frame .left_4 .left_4_info {
+  position: relative;
+  width: 220px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main_frame .left_frame .left_4 .left_4_info span,
+p {
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  color: #767676;
+}
+
+.left_info_margin .margin_line_4_1 {
+  width: 90%;
   border: 2px solid #ffb400;
 }
 
-.left_info_margin .margin_line_2 {
+.left_info_margin .margin_line_4_2 {
+  width: 85%;
+  border: 2px solid #ffb400;
+}
+
+.left_info_margin .margin_line_4_3 {
   width: 80%;
   border: 2px solid #ffb400;
 }
 
-.left_info_margin .margin_line_3 {
-  width: 60%;
+.left_info_margin .margin_line_4_4 {
+  width: 75%;
   border: 2px solid #ffb400;
 }
 
-
-/* left_4 box */
-.main_frame .left_4 {
-    position: relative;
-    width: 220px;
-    height: 153px;
-    margin-top: 25px;
-    margin-left: 45px;
-    background-color: aqua;
+.left_info_margin .margin_line_4_5 {
+  width: 85%;
+  border: 2px solid #ffb400;
 }
+
 
 /* left_5 box */
 .main_frame .left_5 {
@@ -290,3 +302,63 @@
     right: 27.08%;
     margin-top: 5.86%;
 }
+
+.main_frame .middle_frame {
+  position: relative;
+  width: 970px;
+  height: 1259px;
+  margin-left: 30px;
+  margin-right: 27px;
+  display: flex;
+  flex-direction: column;
+}
+.main_frame .middle_frame .middle_top {
+  position: relative;
+  width: 970px;
+  height: 454px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+
+.main_frame .middle_frame .middle_top .middle_top_info {
+  position: relative;
+  width: 500px;
+}
+
+.main_frame .middle_frame .middle_top .middle_top_info span {
+  width: 499.51px;
+  height: 116.74px;
+  margin-bottom: 16px;
+  font-family: sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 123.6%;
+}
+
+.main_frame .middle_frame .middle_top .middle_top_info p {
+  width: 424.44px;
+  height: 85.61px;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.main_frame .middle_frame .middle_top .middle_top_info button {
+  position: relative;
+  width: 154px;
+  height: 51px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10;
+  padding: 16px 32px 16px 32px;
+  border-radius: 5px;
+  background: #ffb400;
+  box-sizing: border-box;
+}
+
